--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                                     <a href="./pages/artificial-intelligence.html" class="dropdown-item ">Artificial
                                         intelligence</a>
-                                    <a href="feature.html" class="dropdown-item ">Our Features</a>
+                                    <a href="./pages/mobile-app-development.html" class="dropdown-item ">Mobile App Development</a>
                                     <a href="team.html" class="dropdown-item ">Instructors</a>
                                     <a href="testimonial.html" class="dropdown-item ">Testimonial</a>
                                 </div>
@@ -535,13 +535,10 @@
                     <input id="tab3" type="radio" name="tabs" class="input-1">
                     <label class="bi bi-bug" for="tab3"><br> INNOVATION IS <br> CRUCIAL</label>
 
-                    <!-- <input id="tab4" type="radio" name="tabs">
-          <label for="tab4">Drupal</label> -->
+                   
 
                     <section id="content1">
-                        <!-- <p>
-              Bacon ipsum dolor sit amet beef venison beef ribs kielbasa. Sausage pig leberkas, t-bone sirloin shoulder bresaola. Frankfurter rump porchetta ham. Pork belly prosciutto brisket meatloaf short ribs.
-            </p> -->
+                     
                         <div class="row">
                             <div class=" col-6">
                                 <h2 class="CRUCIAL">INNOVATION IS CRUCIAL TO THE CONTINUING SUCCESS OF ANY ORGANIZATION
@@ -818,7 +815,7 @@
         <!-- Section - 11 -->
 
 
-        <div class=" container-fluid section-11     ">
+        <div class=" container-fluid section-11      ">
             <div class="row  justify-content-center align-items-custom ">
                 <div class="text-center col-8 text-white ">
                     <h1>GET HANDS ON EXPERIENCE WITH OUR SERVICES</h1>
