--- a/pages/about.html
+++ b/pages/about.html
@@ -101,14 +101,17 @@
                                     data-toggle="dropdown">Services</a>
                                 <div class="dropdown-menu m-0">
 
-                                    <a href="./artificial-intelligence.html" class="dropdown-item">Artificial intelligence</a>
-                                    <a href="feature.html" class="dropdown-item">Our Features</a>
+                                    <a href="./artificial-intelligence.html" class="dropdown-item">Artificial
+                                        intelligence</a>
+                                    <a href="./mobile-app-development.html" class="dropdown-item">Mobile App Development</a>
                                     <a href="team.html" class="dropdown-item">Instructors</a>
                                     <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 </div>
                             </div>
-                            <a href="./success-story.html" class="nav-item nav-link a1  active navbar-font-size ">Success Story </a>
-                            <a href="./contact.html" class="nav-item nav-link a1 active navbar-font-size ">Contact Us </a>
+                            <a href="./success-story.html"
+                                class="nav-item nav-link a1  active navbar-font-size ">Success Story </a>
+                            <a href="./contact.html" class="nav-item nav-link a1 active navbar-font-size ">Contact Us
+                            </a>
                         </div>
                         <button class=" bmarign  bmarign-1 py-2 px-4 d-none d-lg-block " type="submit">Get
                             Quote</button>
