--- a/pages/artificial-intelligence.html
+++ b/pages/artificial-intelligence.html
@@ -96,14 +96,14 @@
                 <div class="collapse navbar-collapse justify-content-between px-lg-3 " id="navbarCollapse">
                     <div class="navbar-nav mx-auto py-0">
                         <a href="../index.html" class="nav-item nav-link active a1 navbar-font-size "> Home</a>
-                        <a href="./pages/about.html" class="nav-item active nav-link a1 navbar-font-size  ">About Us </a>
+                        <a href="./about.html" class="nav-item active nav-link a1 navbar-font-size  ">About Us </a>
                         <div class="nav-item dropdown ">
                             <a href="#" class="nav-link dropdown-toggle a1 active  navbar-font-size "
                                 data-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
 
-                                <a href="detail.html" class="dropdown-item">Artificial intelligence</a>
-                                <a href="feature.html" class="dropdown-item">Our Features</a>
+                                <a href="./artificial-intelligence.html" class="dropdown-item">Artificial intelligence</a>
+                                <a href="./mobile-app-development.html" class="dropdown-item">Mobile App Development</a>
                                 <a href="team.html" class="dropdown-item">Instructors</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                             </div>
