--- a/pages/contact.html
+++ b/pages/contact.html
@@ -102,8 +102,8 @@
                                 data-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
 
-                                <a href="../pages/contact.html" class="dropdown-item">Artificial intelligence</a>
-                                <a href="feature.html" class="dropdown-item">Our Features</a>
+                                <a href="./artificial-intelligence.html" class="dropdown-item">Artificial intelligence</a>
+                                <a href="./mobile-app-development.html" class="dropdown-item">Mobile App Development</a>
                                 <a href="team.html" class="dropdown-item">Instructors</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                             </div>
