--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                         intelligence</a>
                                     <a href="./pages/mobile-app-development.html" class="dropdown-item ">Mobile App
                                         Development</a>
-                                    <a href="team.html" class="dropdown-item ">Instructors</a>
+                                    <a href="./pages/web-development.html" class="dropdown-item ">Website Development</a>
                                     <a href="testimonial.html" class="dropdown-item ">Testimonial</a>
                                 </div>
                             </div>
